[tool.poetry]
name = "yeet"
version = "0.1.0"
description = "A language specification and validator built with Lark"
authors = ["astral4", "Edouard87", "saleh573", "andrewyu23"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
